# mandy

./: COMMANDS.md  Cargo.toml  README.md  TODO.md
src/: lib.rs
src/command/: errors.rs  mod.rs
src/mirror/: actions.rs  helpers.rs  mod.rs  tests.rs
src/net/: mod.rs  tests.rs
src/rsmp/: helpers.rs  mod.rs  parser.rs
src/store/: json.rs  mod.rs
