[package]
name = "mandy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
nom = "7.1.3"
tokio = { version = "1.37.0", features = ["full"] }
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "1.0.61"
tokio-test = "0.4.4"
sha2 = "0.10.8"
hex = "0.4.3"
bytes = "1.7.1"
serde = { version = "1.0.204", optional = true }
serde_json = { version = "1.0.122", optional = true }

[features]
json = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
simple_logger = "5.0.0"
